--- a/templates/config.ini
+++ b/templates/config.ini
@@ -2,7 +2,7 @@ avd.ini.encoding=UTF-8
 AvdId=x86
 PlayStore.enabled=true
 abi.type=x86
-avd.ini.displayname=x86
+avd.ini.displayname=Jroid 8.1
 disk.dataPartition.size=800M
 hw.accelerometer=yes
 hw.audioInput=no
@@ -14,13 +14,13 @@ hw.cpu.ncore=2
 hw.dPad=no
 hw.device.hash2=MD5:1be89bc42ec9644d4b77968b23474980
 hw.device.manufacturer=Google
-hw.device.name=Nexus 5X
+hw.device.name=RedMi Note 4G
 hw.gps=yes
 hw.gpu.enabled=on
 hw.gpu.mode=swiftshader_indirect
 hw.initialOrientation=Portrait
 hw.keyboard=no
-hw.lcd.density=160
+hw.lcd.density=320
 hw.mainKeys=no
 hw.ramSize=1536
 hw.sensors.orientation=yes
@@ -30,10 +30,8 @@ image.sysdir.1=system-images/{{ platform }}/google_apis/x86/
 runtime.network.latency=none
 runtime.network.speed=full
 showDeviceFrame=no
-skin.dynamic=yes
-skin.name=480x800
-skin.path=_no_skin
-skin.path.backup=_no_skin
 tag.display=Google APIs
 tag.id=google_apis
 vm.heapSize=192
+hw.lcd.height=720
+hw.lcd.width=1280
